# AI_Data_Analyst_Agent

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
application/: graph.py  nodes.py  prompts.py  state.py
domain/entities/: dataset.py
domain/ports/: data_port.py
domain/value_objects/: sql_query.py
infrastructure/llm/: hybrid_factory.py
infrastructure/persistence/: duckdb_adapter.py
infrastructure/security/: sql_sanitizer.py
interface/streamlit/: app.py
scripts_pruebas/: check_models.py  test_agent.py  test_infra.py
