[project]
name = "ai-data-analyst-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.3",
    "google-generativeai>=0.8.6",
    "lancedb>=0.26.1",
    "langchain-google-genai>=4.1.3",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlglot>=28.5.0",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]
